updates html file with more details

--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <html>
-    <h1>Fernando's Portfolio</h1>
-    <img style="width:500px" src="./IMG_7591.jpg">
+    <head>
+        <title>Fernando's Portfolio</title>
+    </head>
+    <body>
+        <h1 style="text-align: center; width: 100%;">Fernando's Portfolio</h1>
+        <div style="text-align: center;">
+            <img style="width:20%; display: inline-block;padding:5px" src="./IMG_7591.jpg">
+            <!-- Personal data -->
+            <div  style="display:inline-block;width:30%; vertical-align: top; text-align: left;">
+                <p><strong>Name:</strong> Julio Fernando De La Via Levy</p>
+                <p><strong>Email:</strong> <a href = "mailto: jf.delavia@gmail.com">jf.delavia@gmail.com</a></p>
+                <h3 style="text-decoration: underline;">Projects:</h5>
+                <ul>
+                    <li>
+                        <p><a href="https://jfdlv.github.io/dnd5-bestiary/">DND 5 bestiary</a></p>
+                        <p>small project that displays a searchable list of monsters for dungeons and dragons 5th edition using free services from the internet.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </body>
 </html>
