fixes project description

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li>
                         <p><a href="https://jfdlv.github.io/dnd5-bestiary/">DND 5 bestiary</a></p>
-                        <p>small project that displays a searchable list of monsters for dungeons and dragons 5th edition using free services from the internet.</p>
+                        <p>small react project that displays a searchable list of monsters for dungeons and dragons 5th edition using free services from the internet.</p>
                     </li>
                 </ul>
             </div>
