--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <title>Fernando's Portfolio</title>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </head>
     <body>
         <h1 style="text-align: center; width: 100%;">Julio Fernando's Portfolio</h1>
@@ -19,5 +23,6 @@
                 </ul>
             </div>
         </div>
+        <a href="./projectsPage.html"></a>
     </body>
 </html>
