--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         <li class="list-group-item active" aria-current="true" name="pacmen">Pacmen Project</li>
                         <li class="list-group-item"  name="eye-excersice">Eye Exercise</li>
                         <li class="list-group-item" name="bus-tracking">Real Time Bus Tracking</li>
+                        <li class="list-group-item" name="circles-in-motion">Circles in Motion</li>
                         <li class="list-group-item" name="dnd5-bestiary">Dnd5 bestiary</li>
                         <li class="list-group-item" name="troika-pdf-generator">Troika pdf creator</li>
                     </ul>
@@ -155,6 +156,33 @@
 
                     <div id="bus-tracking-info" style="display:none">
                         Comming soon...
+                    </div>
+
+                    <div id="circles-in-motion-info" style="display:none">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Circles in Motion</h5>
+                                <div class="row">
+                                    <p class="card-text">
+                                        Vanilla Javascript and HTML project, that animate a determined amount of circles to bounce off 
+                                        set limits and change colour with every bounce
+                                    </p>
+                                    <div>
+                                        <a href="https://github.com/jfdlv/circlesInMotion" class="link-primary">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                                            </svg>
+                                            <span>
+                                                Github repo
+                                            </span>
+                                        </a>
+                                    </div>
+                                    <div>
+                                        <a href="https://jfdlv.github.io/circlesInMotion/" class="Link Primary">Live demo</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div id="dnd5-bestiary-info" style="display:none">
