Uses a snippet I found on the web  to make the page prettier.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
                 <a class="navbar-brand" href="#">Julio Fernando De La Via</a>
             </div>
         </nav>
-        <div class="container">
-            <ul class="nav nav-pills nav-fill">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#" name="bio">Bio</a>
+        <nav class="navbar navbar-expand-lg">
+            <ul class="navbar-nav">
+                <li class="active">
+                    <a href="#" class="nav-link" name="bio">Bio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" name="projects">Projects</a>
+                    <a href="#" class="nav-link" name="projects">Portfolio</a>
                 </li>
+                
             </ul>
-        </div>
-        <hr style="width: 90%; margin-left: 5%;">
+        </nav>
         <div class="container" id="bioContainer">
             <div class="row intro-bio-container">
                 <div class="col">
