adds phone number

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                                     <div>
                                         <strong>E-mail</strong><a href="mailto: jf.delavia@gmail.com"class="link-primary" style="margin-left: 5px;">jf.delavia@gmail.com</a>
                                     </div>
+                                    <div>
+                                        <strong>Phone Number</strong><a href="#"class="link-primary" style="margin-left: 5px;">(591) 73726616</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
